<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<EditText
    android:id="@+id/metros"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="number"
    android:hint="@string/metros_consumidos"
    />
    <EditText
        android:id="@+id/Agua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/valor_agua"
        />
    <EditText
        android:id="@+id/Aseo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/valor_aseo"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/local1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:inputType="number"
            android:hint="@string/metros_local_1"
            />
        <EditText
            android:id="@+id/local2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:inputType="number"
            android:hint="@string/metros_local_2"
            />
        <EditText
            android:id="@+id/local3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:inputType="number"
            android:hint="@string/metros_local_3"
            />
        <EditText
            android:id="@+id/local4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:inputType="number"
            android:hint="@string/metros_local_4"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tex_local1"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:textSize="14dp"
            android:layout_marginLeft="6dp"
            android:inputType="number"

            />
        <TextView
            android:id="@+id/tex_local2"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:textSize="14dp"
            android:inputType="number"

            />
        <TextView
            android:id="@+id/tex_local3"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:textSize="14dp"
            android:inputType="number"

            />
        <TextView
            android:id="@+id/tex_local4"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:textSize="14dp"
            android:inputType="number"

            />

    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/Aseo_To"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:inputType="number"
        android:hint="Valor Aseo por local:"
        />

    <TextView
        android:id="@+id/Aseo_va"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:inputType="number"

        />
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/Boton"
            android:layout_width="410dp"
            android:layout_height="match_parent"
            android:text="@string/calcular">

        </Button>




    </LinearLayout>
</LinearLayout>
